# MineCweeper

./: CMakeLists.txt  Makefile  game.c  game.h  main  main.c
src/: difficulty.c  level.c
src/include/: declaration_file.h
src/include/game/: constants.h  difficulty.h  level.h
